--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <img width="120" src="img/natural_beef.png">
                     <h4>Natural Beef</h4>
                     <p class="food_price">$2</p>
-                    <p>Meat And Bone Meal, Corn Gluten Meal, Animal Fat, Soybean Meal, Natural Flavor.</p>
+                    <p>Meat111122222 And Bone Meal, Corn Gluten Meal, Animal Fat, Soybean Meal, Natural Flavor.</p>
                 </article>
             </div>
         </section>
